--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
             <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
                 <div class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center">
-                    <h1><a href="http://blog.stackfindover.com/" rel="dofollow">Social Welfare and Development Committe</a>
+                    <h1><a href="http://blog.stackfindover.com/" rel="dofollow">Social Welfare and Development
+                            Committe</a>
                     </h1>
                 </div>
                 <div class="box-root padding-bottom--24 flex-flex flex-justifyContent--center">
@@ -73,7 +74,8 @@
                                 </div>
                                 <div class="field padding-bottom--24">
                                     <label for="contact">Contact</label>
-                                    <input type="contact" name="entry.1835968737" placeholder="Contact No. (WhatsApp)" />
+                                    <input type="contact" name="entry.1835968737"
+                                        placeholder="Contact No. (WhatsApp)" />
                                 </div>
                                 <div class="field padding-bottom--24">
                                     <label for="email">Email</label>
@@ -81,25 +83,68 @@
                                 </div>
                                 <div class="field padding-bottom--24">
                                     <label for="coorddomain">Coordinator Domain</label>
-                                    <input type="coorddomain" name="entry.1502752086" placeholder="Eg: Social Activity, R&I" />
+                                    <select name="entry.1502752086" type="coorddomain"
+                                        placeholder="Eg: Social Activity, R&I">
+                                        <option value="Social Activity">Social Activity</option>
+                                        <option value="Animal Rescue">Animal Rescue</option>
+                                        <option value="Content">Content</option>
+                                        <option value="Database">Database</option>
+                                        <option value="Finance">Finance</option>
+                                        <option value="Media Acquisition and Creatives">Media Acquisition and Creatives
+                                        </option>
+                                        <option value="Multimedia">Multimedia</option>
+                                        <option value="Outreach">Outreach</option>
+                                        <option value="Research & Innovation">Research & Innovation</option>
+                                        <option value="Scholarship">Scholarship</option>
+                                        <option value="Venue & Resource">Venue & Resource</option>
+                                        <option value="Website">Website</option>
+                                    </select>
                                 </div>
                                 <div class="field padding-bottom--24">
-                                    <label for="applyfor">Sector to Apply</label>
-                                    <li>Hospitality</li>
-                                    <li>Refreshment</li>
-                                    <li>Security</li>
-                                    <li>Registration and Donor Count</li>
-                                    <li>Publicity</li>
-                                    <li>Aesthetics</li>
+                                    <label for="applyfor">Sector to Apply For</label>
+                                    <label class="container">Aesthetics
+                                        <input type="checkbox" name="entry.296905780" value="Aesthetics">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    <label class="container">Hospitality
+                                        <input type="checkbox" name="entry.296905780" value="Hospitality">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    <label class="container">Publicity
+                                        <input type="checkbox" name="entry.296905780" value="Publicity">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    <label class="container">Refreshment
+                                        <input type="checkbox" name="entry.296905780" value="Refreshment">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    <label class="container">Registration and Donor Count
+                                        <input type="checkbox" name="entry.296905780" value="Registration and Donor Count">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    <label class="container">Security
+                                        <input type="checkbox" name="entry.296905780" value="Security">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                    
                                     <br>
-                                    <input type="applyfor" name="entry.296905780" placeholder="Input Sectors (Max - 2)" />
                                 </div>
-                                <span class="padding-bottom--15">Terms and Condition</span>
+                                <span class="padding-bottom--15">Terms and Conditions</span>
                                 <div>
-                                    <li>The Event Planning will be starting from 25 Spetember to 13 October</li>
-                                    <li>The Presence is required Eveyday after 4PM</li>
-                                    <li>Apply for Blood Donation, you have to Manage both Assigned Work (OC) of Ongoing Activity / Event and Blood Donation.</li>
-                                    <li>For the Time, Weekends are not Considered for Blood Donation (Presence is Mandatory, If Needed)</li>
+                                    <ul>
+                                        <li>Event planning will commence from 25th September to 13th October.</li>
+                                        <li>Attendance is <strong>Mandatory</strong> every day after 4PM.</li>
+                                        <li>Coordination of blood donation efforts is required, alongside the management
+                                            of <strong>Assigned work (OC)</strong> for the ongoing Activity/Event.</li>
+                                        <li>Weekends will not host blood donation activities (<strong>Mandatory</strong>
+                                            attendance if needed).</li>
+                                        <li>The entire OC team is responsible for <strong>Aesthetics and
+                                                Publicity</strong> Sectors, Assigned Sectors will start working 2-3 Days
+                                            Prior to the Event. </li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <br>
                                 </div>
 
                                 <div class="field padding-bottom--24">
