--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     </select>
                                 </div>
                                 <div class="field padding-bottom--24">
-                                    <label for="applyfor">Sector to Apply For</label>
+                                    <label for="applyfor">Sector to Apply For (Select Any 2)</label>
                                     <label class="container">Aesthetics
                                         <input type="checkbox" name="entry.296905780" value="Aesthetics">
                                         <span class="checkmark"></span>
@@ -134,7 +134,7 @@
                                     <ul>
                                         <li>Event planning will commence from 25th September to 13th October.</li>
                                         <li>Attendance is <strong>Mandatory</strong> every day after 4PM.</li>
-                                        <li>Coordination of blood donation efforts is required, alongside the management
+                                        <li>Coordination for Blood Donation, Efforts are required, alongside the management
                                             of <strong>Assigned work (OC)</strong> for the ongoing Activity/Event.</li>
                                         <li>Weekends will not host blood donation activities (<strong>Mandatory</strong>
                                             attendance if needed).</li>
