--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>SWD -Blood Donation'23</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://drive.google.com/file/d/1YLL39AFkSLaq_Q0iEaolJSemXthHDWfv/view?usp=sharing">
 </head>
 
 <body>
