--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>SWD -Blood Donation'23</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/x-icon" href="https://drive.google.com/file/d/1YLL39AFkSLaq_Q0iEaolJSemXthHDWfv/view?usp=sharing">
+    <link rel="icon" type="image/x-icon"
+        href="https://drive.google.com/file/d/1YLL39AFkSLaq_Q0iEaolJSemXthHDWfv/view?usp=sharing">
 </head>
 
 <body>
@@ -107,10 +108,8 @@
                                     <select name="entry.73308595" type="allottedactivity">
                                         <option value="Animal Rescue">Animal Rescue</option>
                                         <option value="Go Green">Go Green</option>
-                                        <option value="Police Mitra">Police Mitra</option>
                                         <option value="Matadhikar">Matadhikar</option>
                                         <option value="Swachha Pune">Swachha Pune</option>
-                                        <option value="Utkarsh">Utkarsh</option>
                                         <option value="Vatsalya">Vatsalya</option>
                                     </select>
                                 </div>
