--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="formbg-inner padding-horizontal--48">
                             <span class="padding-bottom--15"><strong>Blood Donation'23 - OC Form</strong></span>
                             <form
-                                action="(Closed the Form)https://docs.google.com/forms/d/e/1FAIpQLSeVfmCW0IBFmJMKktPhiDsJBQe331ZnAyYAo_FJhCbkrTw5RQ/"
+                                action="https://swd.vit.edu/"
                                 id="form">
 
                                 <div class="field padding-bottom--24">
