--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 </div>
 
                                 <div class="field padding-bottom--24">
-                                    <input type="submit" name="submit" value="Submit">
+                                    <a href="https://swd.vit.edu/"><input type="submit" name="submit" value="Submit"></a>
                                 </div>
                             </form>
                         </div>
